--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://rolof042_db_user:GOSp6AgyMWkccpP3@cluster0.lltxrhg.mongodb.net/
+MONGO_URI=mongodb+srv://rolof042_db_user:GOSp6AgyMWkccpP3@cluster0.lltxrhg.mongodb.net/test?appName=Cluster0
